# capibara

./: .env_example  .gitignore  pyproject.toml
capibara/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
